<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:text="@string/thanks_for_the_install"/>

        <LinearLayout
            android:id="@+id/llClickToEnable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/click_to_add"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAddToHomeScreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:layout_marginTop="20dp"
                android:text="@string/click"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvFindTutorial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/cannot_add_widget_from_app"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/app_short_info_text"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnTutorial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@color/black"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:text="@string/how_to_use"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@color/black"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:text="@string/settings"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/afterwords"/>

    </LinearLayout>
</ScrollView>