<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="200dp"
    android:minHeight="380dp"
    android:background="@drawable/bg_rounded"
    android:orientation="vertical"
    tools:ignore="NestedWeights, ContentDescription, HardcodedText">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/containerRequiredSugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="14dp"
                android:text="@string/required_sugar"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvRequiredSugar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="35dp"
                android:text="0" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerCurrentSugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/current_sugar"
                android:textSize="14dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvCurrentSugar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="35dp"
                android:text="0" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/containerCoefficient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="14dp"
                android:text="@string/coefficient"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvCoefficient"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="35dp"
                android:text="0" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerInsulin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="14dp"
                android:textColor="@color/black"
                android:text="@string/insulin" />

            <TextView
                android:id="@+id/tvInsulin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="35dp"
                android:text="0" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/rowIob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvIob"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:text="@string/iob_default_display" />

        <TextView
            android:id="@+id/tvInject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="14dp"
            android:gravity="center"
            android:background="@drawable/bg_selected"
            android:text="@string/inject" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4">

        <TextView
            android:id="@+id/tv7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="7"
            android:textSize="30dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tv8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="30dp"
            android:gravity="center"
            android:text="8" />


        <TextView
            android:id="@+id/tv9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="30dp"
            android:gravity="center"
            android:text="9" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4">

        <TextView
            android:id="@+id/tv4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="30dp"
            android:gravity="center"
            android:text="4" />


        <TextView
            android:id="@+id/tv5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="30dp"
            android:gravity="center"
            android:text="5" />


        <TextView
            android:id="@+id/tv6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="6"
            android:textSize="30dp"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="1"
            android:textSize="30dp"
            android:gravity="center"/>


        <TextView
            android:id="@+id/tv2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="2"
            android:textSize="30dp"
            android:gravity="center"/>


        <TextView
            android:id="@+id/tv3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="3"
            android:textSize="30dp"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4">

        <TextView
            android:id="@+id/tvDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="←"
            android:textSize="30dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tv0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="0"
            android:textSize="30dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tvDot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="."
            android:textSize="30dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tvEquals"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="="
            android:textSize="30dp"
            android:gravity="center"/>

    </LinearLayout>
</LinearLayout>